--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>it.marbola.apt</groupId>
     <artifactId>spring-jdbc</artifactId>
-    <version>0.0.1</version>
+    <version>1.0.0-SNAPSHOT</version>
 
     <build>
         <plugins>
